[package]
name = "skia-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { version = "0.45.1", features = ["gl"] }
glutin = "0.27.0"
gl-rs = { package = "gl", version = "0.14.0" }
skia-bindings = { version = "=0.45.1", default-features = false }
